--- a/style/style.css
+++ b/style/style.css
@@ -260,7 +260,6 @@ ion-icon{
 
 img {
     flex: 0 0 3rem;
-    margin-right: 1.5rem;
 }
 
 .boton-proyecto {
@@ -315,6 +314,8 @@ img {
     color: var(--blanco);
     font-size: 2rem;
     margin-bottom: 0;
+    width: fit-content;
+    margin: auto;
 }
 
 p.copyright {
@@ -324,12 +325,17 @@ p.copyright {
 
 /* About me */
 
-.contenedor{
-    width: 95%;
-    max-width: 120 rem;
-    margin: 0 auto;
+.container-about {
+    width:fit-content;
+    margin-left: auto;
+    margin-right: auto;
 }
 
+.info-container{
+    width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+}
 
 h3.about-title {
     color: var(--azulMedio)
@@ -339,48 +345,45 @@ span{
     color: #000;
 }
 
+.container-about a {
+    color: #000;
+    font-size: 1.8rem;
+}
+
+.imgRedonda {
+    width: 50%;
+    height: 50%;
+    border-radius: 25%;
+    /* border: 3px solid var(--azulOscuro); */
+    margin-top: 8%;
+    margin-left: 25%;
+    margin-right: 25%;
+} 
+
 @media (min-width: 768px) {
     .container-about {
         margin: 3.5rem;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-gap: 1rem;
+        margin-right: auto;
+        margin-left: auto;
     }
-    .img-container {
-        margin-top: 4rem;
-        margin-left: 0;
-    }
-
+    
     .imgRedonda {
         grid-column: 1/2;
-        width: 400px;
-        height: 400px;
-        border-radius: 200px;
-        border: 3px solid var(--azulOscuro);
-        align-items: flex-end;
+        width: 100%;
+        height: 100%;
+        /* border-radius: 50%; */
+        /* border: 3px solid var(--azulOscuro); */
+        margin-top: 5%;
+        margin-left: auto;
     }
     .info-container {
         grid-column: 2 / 4;
         line-height: 2;
+        margin: auto;
     }
-}
-
-.container-about, .info-container{
-    width: 90%;
-    max-width: 120 rem;
-    margin: auto;
-}
-
-.img-container {
-    margin-left: 20%;
-}
-
-.imgRedonda {
-    width: 300px;
-    height: 300px;
-    border-radius: 150px;
-    border: 3px solid var(--azulOscuro);
-    margin-top: 2rem;
 }
 
 /*Contacto */
